# 2020

./: README.md
src/: CMakeLists.txt  Makefile  final_main.cpp  fitEllipse.cpp  fitEllipseToRoi.cpp  images.xml  include.hpp  justRead.cpp  list.xml  main.cpp  makeMask.cpp  minimumColorDifference.cpp  movie.cpp  newHomography.cpp  opt.cpp  prepareTemplate.cpp  setting.cpp  test.cpp  test2.cpp  text.txt
src/AdaptiveIntegralThresholding/: thresh.hpp
src/backup/: back.cpp  test.cpp
src/common/: class.cpp  class.h  init.cpp  init.hpp
src/include/: circle.hpp  difference.cpp  difference.hpp  init.cpp  init.hpp  module.hpp  mser.hpp  read.cpp  read.hpp  temp.cpp
src/modules/pos/: Homography.cpp  calib.cpp  calib.hpp  fromtwo.cpp  fromtwo.hpp  homography.cpp  homography.hpp  module.cpp
src/modules/read/: difference.cpp  difference.hpp  readability.cpp  readability.hpp  template.cpp  template.hpp
src/params/: calibration_params.hpp  pose_params.hpp
src/pos/: calib.cpp  calib.hpp  module.cpp  module.hpp
src/read/: difference.cpp  difference.hpp  read.cpp  readability.cpp  readability.hpp  template.cpp
src/testsuite/: fitEllipseToRoi.cpp
